--- a/src/Jili/EmarBundle/Resources/views/Product/suggestionHot.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/suggestionHot.html.twig
@@ -1,24 +1,23 @@
-
-    <div class="sidebarRecommend">
-      <h2>别人都在买</h2>
-      <ul>
-        <li class="clearfix">
-          <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
-          <dd>
-            <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
-            <p class="price">¥128.20</p>
-            <p class="shop">京东商城</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li class="clearfix">
-          <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
-          <dd>
-            <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
-            <p class="price">¥128.20</p>
-            <p class="shop">京东商城</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-      </ul>
-    </div>
+<div class="sidebarRecommend">
+        <h2>别人都在买</h2>
+        <ul>
+            <li class="clearfix">
+                <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
+                <dd>
+                    <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
+                    <p class="price">¥128.20</p>
+                    <p class="shop">京东商城</p>
+                    <p class="rebate">返利最高：<em>10%</em></p>
+                </dd>
+            </li>
+            <li class="clearfix">
+                <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
+                <dd>
+                    <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
+                    <p class="price">¥128.20</p>
+                    <p class="shop">京东商城</p>
+                    <p class="rebate">返利最高：<em>10%</em></p>
+                </dd>
+            </li>
+        </ul>
+    </div><!-- sidebarRecommend -->
