--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -2,7 +2,7 @@
 
 {% block stylesheet %}
 <link href="{{ asset('css140307/shopMore.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/commodity.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/commodity834.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 
@@ -67,17 +67,3 @@
 
 {% endblock %}
 
-{#
-\EmarBundle\Controller\WebsitesController:array (
- 34   'web_id' => '1301',
- 35   'web_name' => '易迅',
- 36   'web_catid' => '3',
- 37   'logo_url' => 'http://image.yiqifa.com/ad_images/reguser/24/53/11/1315978406469.jpg',
- 38   'web_url' => 'http://p.yiqifa.com/n?k=2mLErnDe1ngH2mquUZgL18H_UmUmfcyAkZPdf96_YQLErI6H6nWlWZLFWEjS1QLLrJqwkBMsKQq_rI6H6NWe3NDmMJBH2L--&e=APImembe    rId&spm=139216929186018017.1.1.1',
- 39   'information' => '易迅网是依托著名的IT产品通路商上海易迅电子商务发展有限公司而创立的新一代专业电子商务消费服务网站。易迅网利用强大的全球化集约采>    购优势、丰富的电子商务管理服务经验和最先进的互联网技术为您提供最新最好的电脑配件类、游戏外设类、多媒体设备类、数码设备类、时尚用品类等等多种时尚精>    品。',
- 40   'begin_date' => '2009-12-07 00:00:00',
- 41   'end_date' => '2013-12-31 00:00:00',
- 42   'commission' => '佣金为:1-60元',
- 43 ) [] []
-
-#}
