--- a/src/Jili/EmarBundle/Resources/views/Product/searchForm.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/searchForm.html.twig
@@ -7,19 +7,17 @@
         <div class="form">
 
 {% if all is defined %}
-    <form action="{{ path('jili_emar_product_searchform' , all   ) }}" method="POST" >
+    <form action="{{ path('jili_emar_product_searchform' , all   ) }}" method="POST" ><!-- 1 -->
 {%  else %}
     {% if router is defined %}
-        <form action="{{ path( router , app.request.query.all   ) }}" method="POST" >
+        <form action="{{ path( router , app.request.query.all   ) }}" method="POST" ><!-- 2 -->
+   {% else %}
+        <form action="{{ path('jili_emar_product_searchform' , app.request.query.all   ) }}" method="POST" ><!-- 3 -->
     {% endif %}
-        <form action="{{ path('jili_emar_product_searchform' , app.request.query.all   ) }}" method="POST" >
 {% endif %}
 
-<!-- 
-<input type="text" onkeydown="javascript:if(event.keyCode==13) search('key');" autocomplete="off" id="key" accesskey="s" class="text">
--->
-          {{ form_widget(form.q, {'attr': { 'type': 'text', 'onkeydown': "javascript:if(event.keyCode==13) search('key');", 'autocomplete':"off", 'id':"key", 'accesskey':"s", 'class':"text"  }} )  }}
-          <input type="submit" clstag="homepage|keycount|home2013|03a" onclick="search('key');return false;" class="button" value="搜索">
-          {{ form_rest(form)  }}
-</form>
-        </div>
+     {{ form_widget( form.q, {'attr': {  'onkeydown': "javascript:if(event.keyCode==13) search('key');", 'autocomplete':"off",  'accesskey':"s", 'class':"text"  }} )  }}
+    <input type="submit" clstag="homepage|keycount|home2013|03a" onclick="search('key');return false;" class="button" value="搜索">
+    {{ form_rest(form)  }}
+    </form>
+</div>
