--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList_category.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList_category.html.twig
@@ -1,31 +1,32 @@
 
-     <div class="shopList">
       <h1>商家列表<span>共{{ total }}个商家</span></h1>
-      <div class="classify clearfix">
-        <dd class="fl" style="height: auto;"> 
+      <div class="screen clearfix">
+        <dd class="fl w794 h56" style="height: auto;"> 
 
 {% set wcatid_q = app.request.query.get('wcat','') %}
-
-{% if wcatid_q is not defined or wcatid_q|length == 0 %}
+<li>
+    {% if wcatid_q is not defined or wcatid_q|length == 0 %}
         <a class="hover" href="#" onclick="javascript:return false;">热门商家</a> 
-{% else %}
+    {% else %}
         <a  href="#" onclick="javascript:return false;">热门商家</a> 
-{% endif %}
+    {% endif %}
 
+</li>
 {% for wcatid,cat in categories %}
-
-{% if wcatid_q is defined and wcatid_q == wcatid  %}
+<li>
+    {% if wcatid_q is defined and wcatid_q == wcatid  %}
         <a class="hover" href="#" onclick="javascript:return false;" >{{ cat.name}}</a>
-{% else %}
+    {% else %}
         <a  href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'wcat':wcatid,"q":"", "p":1 })) }}">{{ cat.name}}</a>
-{% endif  %}
+    {% endif  %}
 
-{# <a href="#"> 综合商城 </a> <a href="#"> 服装服饰 </a> <a href="#"> 手机/数码/家电 </a> <a href="#"> 美容化妆 </a> <a href="#"> 家居家饰 </a> <a href="#"> 女性/内衣 </a> <a href="#"> 母婴/儿童用品 </a> <a href="#"> 图书音像 </a> <a href="#"> 鲜花礼品 </a> <a href="#"> 珠宝首饰 </a> <a href="#"> 食品/茶叶/酒水 </a> <a href="#"> 医药健康 </a> <a href="#"> 成人保健 </a> <a href="#"> 汽车用品 </a> <a href="#"> 运动户外 </a> <a href="#"> 箱包/眼镜/鞋类 </a> <a href="#"> 团购 </a> <a href="#"> 电视购物 </a> <a href="#"> 教育培训 </a> <a href="#"> 票务旅游 </a> <a href="#"> 金融理财 </a> <a href="#"> 网络游戏 </a> <a href="#"> 娱乐交友 </a> <a href="#"> 网络服务/其他 </a> <a href="#"> 名品特卖 </a> <a href="#"> 奢侈品 </a> <a class="unfoldBtn">展开</a>  #}
+</li>
 {% endfor %}
+
 {#
 <a class="unfoldBtn">展开</a>
 #}
       </dd>
-    </div>
+  </div><!-- eof screen -->
 
 
