--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -3,12 +3,13 @@
 
 {% block stylesheet %}
 <link href="{{ asset('css140307/searchShop.css') }} " rel="stylesheet" type="text/css">
-<link href="{{ asset('css140307/commodity.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/screen.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 
 {% block javascript %}
 <script src="{{ asset('js140307/shopList.js') }}" language="javascript"></script>
+<script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
 {% endblock %}
 
 {% block search_box %}
@@ -19,14 +20,11 @@
 
   <div class="main w834 fl">
 
-    <div class="searchShop">
       {{ include( "JiliEmarBundle:Websites:shopSearch_category.html.twig") }}
+
       {{ include( "JiliEmarBundle:Websites:shopSearch_page.html.twig") }}
+
       {{ include( "JiliEmarBundle:Websites:recommend.html.twig") }}
-
-
-   </div><!-- eof searchShop -->
-
     <div style="display: inline-block; width: 100%;">
       <ul class="pageNav">
         <li class="currPage"> <a href="/shopping/list?page=1">1</a> </li>
@@ -44,29 +42,7 @@
   </div><!-- eof main-->
 
   <div class="sidebar w300 fr">
-    <div class="sidebarRecommend">
-      <h2>别人都在买</h2>
-      <ul>
-        <li class="clearfix">
-          <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
-          <dd>
-            <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
-            <p class="price">¥128.20</p>
-            <p class="shop">京东商城</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-        <li class="clearfix">
-          <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
-          <dd>
-            <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
-            <p class="price">¥128.20</p>
-            <p class="shop">京东商城</p>
-            <p class="rebate">返利最高：<em>10%</em></p>
-          </dd>
-        </li>
-      </ul>
-    </div>
+{% include "JiliEmarBundle:Product:suggestionHot.html.twig" %}
   </div><!-- eof sidebar -->
 
 {% endblock %}
