--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_category.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch_category.html.twig
@@ -1,16 +1,14 @@
 
-
-      <h1>搜索关键字：{{ search_keyword }}<span>共{{ total }}个结果</span></h1>
-      <div class="classify clearfix">
-        <dd class="fl">
-
 {% set wcatid_q = app.request.query.get('wcat','') %}
 
-{% if wcatid_q is not defined or wcatid_q|length == 0 %}
-    <li><a class="hover" href="#" onclick="javascript:return false;">热门商家</a> </li>
-{% else %}
-    <li><a  href="#" onclick="javascript:return false;">热门商家</a> </li>
-{% endif %}
+      <h1>搜索关键字：{{ search_keyword }}<span>共{{ total }}个结果</span></h1>
+      <div class="screen clearfix">
+        <dd class="fl w794 h56">
+        {% if wcatid_q is not defined or wcatid_q|length == 0 %}
+            <li><a class="hover" href="#" onclick="javascript:return false;">热门商家</a> </li>
+        {% else %}
+            <li><a  href="#" onclick="javascript:return false;">热门商家</a> </li>
+        {% endif %}
 
 
 {% for wcatid,cat in categories %}
@@ -22,38 +20,5 @@
 {% endif  %}
 {% endfor  %}
 
-{#
-          <li><a class="hover" href="#">热门商家</a></li>
-          <li><a href="#"> 综合商城 </a></li>
-          <li><a href="#"> 服装服饰 </a></li>
-          <li><a href="#"> 手机/数码/家电 </a></li>
-          <li><a href="#"> 美容化妆 </a></li>
-          <li><a href="#"> 家居家饰 </a></li>
-          <li><a href="#"> 女性/内衣 </a></li>
-          <li><a href="#"> 母婴/儿童用品 </a></li>
-          <li><a href="#"> 图书音像 </a></li>
-          <li><a href="#"> 鲜花礼品 </a></li>
-          <li><a href="#"> 珠宝首饰 </a></li>
-          <li><a href="#"> 食品/茶叶/酒水 </a></li>
-          <li><a href="#"> 医药健康 </a></li>
-          <li><a href="#"> 成人保健 </a></li>
-          <li><a href="#"> 汽车用品 </a></li>
-          <li><a href="#"> 运动户外 </a></li>
-          <li><a href="#"> 箱包/眼镜/鞋类 </a></li>
-          <li><a href="#"> 团购 </a></li>
-          <li><a href="#"> 电视购物 </a></li>
-          <li><a href="#"> 教育培训 </a></li>
-          <li><a href="#"> 票务旅游 </a></li>
-          <li><a href="#"> 金融理财 </a></li>
-          <li><a href="#"> 网络游戏 </a></li>
-          <li><a href="#"> 娱乐交友 </a></li>
-          <li><a href="#"> 网络服务/其他 </a></li>
-          <li><a href="#"> 名品特卖 </a></li>
-          <li><a href="#"> 奢侈品 </a></li>
-          <a class="unfoldBtn">展开</a> </dd>
-#}
       </div>
-{#
-               <a href="{{ path( app.request.attributes.get('_route'), app.request.query.all|merge({'cat':scid, "p":1, "pr":"" })) }}">{{ scat }}</a></dd>
-#}
 
