use ghs on cps top

--- a/src/Jili/EmarBundle/Resources/views/Product/suggestionHot.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/suggestionHot.html.twig
@@ -2,7 +2,7 @@
         <h2>别人都在买</h2>
         <ul>
             <li class="clearfix">
-                <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
+                <dt><img src="{{ asset('other140307/image100.jpg') }}" width="150" height="150" /></dt>
                 <dd>
                     <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
                     <p class="price">¥128.20</p>
@@ -11,7 +11,7 @@
                 </dd>
             </li>
             <li class="clearfix">
-                <dt><img src="other140307/image100.jpg" width="150" height="150" /></dt>
+                <dt><img src="{{ asset('other140307/image100.jpg') }}" width="150" height="150" /></dt>
                 <dd>
                     <p class="title">BERLA 2013新品夏装女童装花童礼服韩版气质甜美网纱公主</p>
                     <p class="price">¥128.20</p>
