--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -24,31 +24,31 @@
   <div class="w204 h340 fl">
     <div class="module categorys">
       <h3>所有商品分类</h3>
-      {% include('JiliEmarBundle:Product:category.html.twig') %}
+      {{ include('JiliEmarBundle:Product:category.html.twig') }}
      </div>
   </div><!-- eof w204 -->
 
   <div class="w615 h340 fl">
      <ul class="cpsBanner">
       <div class="moveDiv" style="width: 2460px; left: -1230px;">
-          <li><img width="615" height="320" src="other140307/image100.jpg"></li>
-          <li><img width="615" height="320" src="other140307/image100.jpg"></li>
-          <li><img width="615" height="320" src="other140307/image100.jpg"></li>
-          <li><img width="615" height="320" src="other140307/image100.jpg"></li>
+          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
+          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
+          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
+          <li><img width="615" height="320" src="{{ asset('other140307/image100.jpg') }}"></li>
       </div>
       <a class="prevBtn">prev</a><a class="nextBtn">next</a>
     </ul>
   </div><!-- eof w615  -->
 
   <div class="w300 h340 fr">
-  {% render(controller('JiliEmarBundle:Websites:hotOnCps') ) %}
+  {{ render(controller('JiliEmarBundle:Websites:hotOnCps') ) }}
   </div><!-- eof w300 -->
 
   <div class="main w834 fl">
-      {{ render(controller('JiliEmarBundle:Hotactivity:partialOnCps', {'catids':app.request.query.get('c_h')} ))  }}
+      {{ render(controller('JiliEmarBundle:Ghs:partialOnCps', {'catids': app.request.query.get('c_h') } ))  }}
   </div><!-- main w834 -->
 
   <div class="sidebar w300 fr">
-  {% include "JiliEmarBundle:Product:suggestionHot.html.twig" %}
+  {{ include("JiliEmarBundle:Product:suggestionHot.html.twig") }}
   </div><!-- sidebar -->
 {% endblock %}
