--- a/src/Jili/EmarBundle/Resources/views/Websites/searchForm.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/searchForm.html.twig
@@ -1,4 +1,5 @@
 {# todo: duplicated to the form JiliEmarBundle:Products:searchForm #}
+
         <div class="seacherMenu"> <span>商城</span>
           <ul style="display: none;">
             <li lang="commodity">商品</li>
@@ -12,16 +13,14 @@
 {%  else %}
     {% if router is defined %}
         <form action="{{ path( router , app.request.query.all   ) }}" method="POST" >
-    {% endif %}
+    {% else %}
         <form action="{{ path('jili_emar_product_searchform' , app.request.query.all   ) }}" method="POST" >
+    {% endif %}
 {% endif %}
 
-<!-- 
-<input type="text" onkeydown="javascript:if(event.keyCode==13) search('key');" autocomplete="off" id="key" accesskey="s" class="text">
--->
           {{ form_widget( form.q , {'attr': { 'type': 'text', 'onkeydown': "javascript:if(event.keyCode==13) search('key');", 'autocomplete':"off", 'id':"key", 'accesskey':"s", 'class':"text"  }} )  }}
           {{ form_widget( form.rt , {'attr' : { 'value' :  1 }  } ) }}
           <input type="submit" clstag="homepage|keycount|home2013|03a" onclick="search('key');return false;" class="button" value="搜索">
           {{ form_rest(form)  }}
 </form>
-        </div>
+</div>
