--- a/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_form.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shoplist_search_form.html.twig
@@ -1,14 +1,7 @@
-
-<form action="{{ path('jili_emar_websites_shoplistsearch',app.request.query.all) }}" method="POST">
-    <div>
-        {# form_label(form.keyword) #}
-    
-        {# form_errors(form.keyword) #}
-    
-        关键字:{{ form_widget(form.keyword) }}
-
+<form action="{{ path('jili_emar_websites_shoplistsearch',app.request.query.all) }}" method="POST" class="shopSearch" >
+   {{ form_widget(form.keyword, { 'attr': { 'class': 'shopSearchInput', 'palceholder': '该条件下查找'}}) }}
+   {{ form_rest(form) }}
+    <div class="shopSearchSubmit" >
+    <input type="submit" class="shopSearchBtn"  />
     </div>
-    
-    {{ form_rest(form) }}
-    <input type="submit" value="Search" />
 </form>
