--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block search_box %}
-     {% include 'JiliEmarBundle:Websites:searchForm.html.twig' with {'form': search_form, 'router': 'jili_emar_websites_shopsearch' } %}
+    {{ render( controller('JiliEmarBundle:Search:form', { 'rt': 1 })) }}
 {% endblock %}
 
 {% block page_main %}
