--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block search_box %}
-     {% include 'JiliEmarBundle:Websites:searchForm.html.twig' with {'form': search_form, 'router': app.request.attributes.get('_route') } %}
+    {{ render( controller('JiliEmarBundle:Search:form', { 'qs': app.request.query.all, 'rt' : 1 } )) }}
 {% endblock %}
 
 {% block page_main %}
