--- a/src/Jili/EmarBundle/Resources/views/base140307.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/base140307.html.twig
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -17,7 +18,9 @@
 </head>
 <body>
 <div id="header">
-{% include '::header.html.twig' %}
+    {% block header %}
+       {% include "::header.html.twig" %}
+    {% endblock %}
 </div>
 
 <div class="pageMain page clearfix">
