--- a/src/Jili/ApiBundle/Resources/views/Advertiserment/offer99.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Advertiserment/offer99.html.twig
@@ -18,8 +18,16 @@
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle adList">
   <article>
-    <h2><img src="{{ asset('images/adTitle.jpg') }}" width="149" height="19" alt="体验广告"></h2>
-    <iframe src='http://app.offer99.com/index.php?pid={{ offer99_com.pid }}&userid={{ app.session.get('uid') }}' style='width:980px;height:560px;' scrolling='no' frameborder='no' border='0' allowTransparency='true'></iframe>
+    <!--  subnav  -->
+    <div class="offwowSubnav">
+        <ul class="subnavList">
+            <li class="subnavItem first"><a href="{{ asset(path('_advertiserment_list')) }}">任务大厅一</a></li>
+            <li class="subnavItem"><a class="now" href="{{ asset(path('_advertiserment_offer99')) }}">任务大厅二</a></li>
+        </ul>
+        <div class="navNew"><img src="{{ asset('images/newTag.gif') }}" title="NEW"></div>
+    </div>
+    <!--  subnav  /-->
+    <iframe src='http://app.offer99.com/index.php?pid={{ offer99_com.pid }}&userid={{ app.session.get('uid') }}' style='width:1000px;height:550px;' scrolling='auto' frameborder='no' border='0' allowTransparency='true'></iframe>
   </article>
 </div>
 {% include 'JiliApiBundle::footer.html.twig' %}
