--- a/web/css/adListNew.css
+++ b/web/css/adListNew.css
@@ -1,8 +1,11 @@
 aside {
     width:225px;
 }
+aside.offowAside{
+	margin-top:40px;
+}
 .adList{
-	margin-top:30px;
+	margin-top:15px;
 }
 .adList article{
 	width: 723px;
@@ -111,3 +114,10 @@ aside {
     text-align: center;
     width: 100%;
 }
+.offwowSubnav{ width:960px;}
+.offwowSubnav .subnavList{ position:relative; height:40px; line-height:40px; font-size:14px;}
+.offwowSubnav .subnavList .subnavItem{ float:left; padding:0 30px 0 0;}
+.offwowSubnav .subnavList .first a{ border-right:1px solid #ccc; padding-right:30px;}
+.offwowSubnav .subnavList a{ color:#333;}
+.offwowSubnav .subnavList a:hover,.offwowSubnav .subnavList a.now{ color:#ea4b11;}
+.navNew{ position:absolute; top: -5px; left: 173px; z-index: 99999;}
