--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -8,6 +8,7 @@
 {% endblock %}
 
 {% block javascript %}
+<script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/categorys.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/cps.js') }}" language="javascript"></script>
