--- a/src/Jili/EmarBundle/Resources/views/Product/retrieve.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/retrieve.html.twig
@@ -2,11 +2,14 @@
 
 {% block stylesheet %}
 <link href="{{ asset('css140307/categorys.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/pageNumber.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/recommend.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/screen.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/commodity930.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
+<script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/categorys.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
 {% endblock %}
