--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -2,12 +2,15 @@
 
 
 {% block stylesheet %}
+<link href="{{ asset('css140307/pageNumber.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/recommend.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/searchShop.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/screen.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 
 {% block javascript %}
+<script src="{{ asset('js140307/recommend.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/shopList.js') }}" language="javascript"></script>
 <script src="{{ asset('js140307/screen.js') }}" language="javascript"></script>
 {% endblock %}
