--- a/src/Jili/EmarBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/index.html.twig
@@ -155,76 +155,11 @@
     </div><!-- eof getMallList -->
     
     <div id="indexRecommend">
-
-      <h3>超值低价</h3>
-      <div class="menu"><a class="more" href="#">更多&gt;&gt;</a></div>
-      <ul class="clearfix">
-        <li>
-          <p class="image"><a href="#"><img width="200" height="130" src="{{ asset('other140307/image100.jpg') }}"></a></p>
-          <p class="price">￥9.90<em>2.1折</em></p>
-          <p><del>原价￥19.90</del> 销量223344件</p>
-        </li>
-        <li>
-          <p class="image"><a href="#"><img width="200" height="130" src="{{ asset('other140307/image100.jpg') }}"></a></p>
-          <p class="price">￥9.90<em>2.1折</em></p>
-          <p><del>原价￥19.90</del> 销量223344件</p>
-        </li>
-        <li class="mr0">
-          <p class="image"><a href="#"><img width="200" height="130" src="{{ asset('other140307/image100.jpg') }}"></a></p>
-          <p class="price">￥9.90<em>2.1折</em></p>
-          <p><del>原价￥19.90</del> 销量223344件</p>
-        </li>
-        <li>
-          <p class="image"><a href="#"><img width="200" height="130" src="{{ asset('other140307/image100.jpg') }}"></a></p>
-          <p class="price">￥9.90<em>2.1折</em></p>
-          <p><del>原价￥19.90</del> 销量223344件</p>
-        </li>
-        <li>
-          <p class="image"><a href="#"><img width="200" height="130" src="{{ asset('other140307/image100.jpg') }}"></a></p>
-          <p class="price">￥9.90<em>2.1折</em></p>
-          <p><del>原价￥19.90</del> 销量223344件</p>
-        </li>
-        <li class="mr0">
-          <p class="image"><a href="#"><img width="200" height="130" src="{{ asset('other140307/image100.jpg') }}"></a></p>
-          <p class="price">￥9.90<em>2.1折</em></p>
-          <p><del>原价￥19.90</del> 销量223344件</p>
-        </li>
-      </ul>
+        {{ render(controller('JiliEmarBundle:Ghs:promotion', {'max': 6, 'tmpl': 'top', 'p': 1 }) ) }} 
     </div><!-- eof indexRecommend -->
 
     <div id="marketActivity">
-      <h3>品牌热卖</h3>
-      <ul class="clearfix">
-        <div class="mask">
-          <div class="moveDiv">
-            <li>
-              <dt><a href="#"><img width="494" height="121" src="{{ asset('other140307/image100.jpg') }}"></a></dt>
-              <dd>
-                <p class="title">娇韵的风景的风景特卖4折起</p>
-                <p class="discount">2.1折起</p>
-                <p class="btn"><a href="#" class="goActivity">去看看</a></p>
-              </dd>
-            </li>
-            <li>
-              <dt><a href="#"><img src="{{ asset('other140307/image100.jpg') }}" width="494" height="121" /></a></dt>
-              <dd>
-                <p class="title">娇韵的风景的风景特卖4折起</p>
-                <p class="discount">2.1折起</p>
-                <p class="btn"><a class="goActivity" href="#">去看看</a></p>
-              </dd>
-            </li>
-            <li>
-              <dt><a href="#"><img src="{{ asset('other140307/image100.jpg') }}" width="494" height="121" /></a></dt>
-              <dd>
-                <p class="title">娇韵的风景的风景特卖4折起</p>
-                <p class="discount">2.1折起</p>
-                <p class="btn"><a class="goActivity" href="#">去看看</a></p>
-              </dd>
-            </li>
-          </div>
-        </div>
-        <a class="prevBtn">prev</a><a class="nextBtn">next</a>
-      </ul>
+        {{ render(controller('JiliEmarBundle:Hotactivity:hot', {'max': 3, 'tmpl': 'top' } ))}}
     </div><!-- eof marketActivity -->
   </div><!-- w615 side -->
  
