--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -30,26 +30,7 @@
     <div id="timeline">
       <h3>最新动态</h3>
       <div class="mask">
-        <ul class="clearfix">
-          <li>
-            <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-          </li>
-          <li>
-            <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-          </li>
-          <li>
-            <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-          </li>
-          <li>
-            <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-          </li>
-          <li>
-            <p><span>14896630</span>支付宝兑换<em>5000</em>积分 </p>
-          </li>
-          <li>
-            <p><span>14896630</span>支付宝兑换<em>6000</em>积分 </p>
-          </li>
-        </ul>
+        {{ render(controller('JiliApiBundle:Top:event') ) }}
       </div><!-- eof mask -->
     </div><!-- eof timeline -->
   </div><!-- w204 side -->
@@ -167,9 +148,12 @@
     {% if not app.session.has('uid') %}
     <div style="display:block;" class="loginFrame">
       <div id="userLogin">
-        <form action="/" method="post" name="form1" id="form1">
+        <form action="{{ path('jili_api_top_index') }}" method="post" name="form1" id="form1">
+          {% if code %}
+          <p class="error">{{ code }}</p>
+          {% endif %}
           <p>
-            <input type="text" name="email" class="text" id="email" value="">
+            <input type="text" name="email" class="text" id="email" value="{{ email }}">
           </p>
           <p>
             <input type="password" name="pwd" class="password" id="password">
@@ -179,8 +163,8 @@
             <label>
               <input type="checkbox" id="rem" value="1" name="remember_me">
               记住我</label>
-            | <a href="http://www.91jili.com/user/resetPwd" class="forget">忘记密码?</a></p>
-          <p><a href="/user/reg" class="reg">免费注册</a></p>
+            | <a href="{{ asset(path('_user_resetPwd'),'cdn1') }}" class="forget">忘记密码?</a></p>
+          <p><a href="{{ path('_user_reg') }}" class="reg">免费注册</a></p>
         </form>
       </div>
       <div id="aboutJili">
@@ -194,19 +178,7 @@
     </div> <!-- eof login Frame -->
     {% else %}
     <div class="userFrame">
-      <div id="userInfo">
-        <div class="basic clearfix">
-            <div class="photo"><img width="90" height="90" src="{{ asset('other140307/image100.jpg') }}"></div>
-          <p class="name">您好，clauzu</p>
-          <p><a class="goUserInfo" href="#">进入个人中心</a></p>
-        </div>
-        <div class="point clearfix">
-          <dt>当前米粒数</dt>
-          <dt class="right">确认中米粒数</dt>
-          <dd>1355</dd>
-          <dd class="right">4287</dd>
-        </div>
-      </div>
+      {{ render(controller('JiliApiBundle:Top:userInfo' ) ) }}
     </div>    <!-- eof user Frame -->
     {% endif %}
 
@@ -221,70 +193,14 @@
     <div id="news">
       <h3>最新公告</h3>
       <div class="mask">
-        <div class="all">
-          <ul class="clearfix">
-            <li><a target="_blank" href="http://www.91jili.com/callboard/info/20"><span>【系统】</span>3/10 游戏维护</a></li>
-            <li><a target="_blank" href="http://www.91jili.com/callboard/info/19"><span>【系统】</span>2/10 网站服务器更新</a></li>
-            <li><a target="_blank" href="http://www.91jili.com/callboard/info/18"><span>【系统】</span>手机费兑换公告</a></li>
-          </ul>
-          <ul class="clearfix">
-            <li><a target="_blank" href="http://www.91jili.com/callboard/info/16"><span>【系统】</span>春节放假通知</a></li>
-            <li><a target="_blank" href="http://www.91jili.com/callboard/info/17"><span>【系统】</span>1/26 网站服务器更新</a></li>
-            <li><a target="_blank" href="http://www.91jili.com/callboard/info/15"><span>【系统】</span>1/7 网站维护</a></li>
-          </ul>
-        </div>
+        {{ render(controller('JiliApiBundle:Top:callboard' ) ) }}
       </div>
       <div class="pageNumber"><a class="prev"></a><span>1/2</span><a class="next"></a></div>
     </div>    <!-- eof news -->
     <div id="ranking">
       <h3>排行榜</h3>
       <div class="mask">
-        <div style="left: 0px;" class="all">
-          <ul class="month clearfix">
-            <li class="rank1">
-              <dd>雨过天晴76</dd>
-              <dt><span>17001</span>累计米粒</dt>
-            </li>
-            <li class="rank2">
-              <dd>minda41</dd>
-              <dt><span>14001</span>累计米粒</dt>
-            </li>
-            <li class="rank3">
-              <dd>1890869</dd>
-              <dt><span>13011</span>累计米粒</dt>
-            </li>
-            <li class="rank4">
-              <dd>小红帽</dd>
-              <dt><span>13003</span>累计米粒</dt>
-            </li>
-            <li class="rank5">
-              <dd>5826</dd>
-              <dt><span>13000</span>累计米粒</dt>
-            </li>
-          </ul>
-          <ul class="year clearfix">
-            <li class="rank1">
-              <dd>jine</dd>
-              <dt><span>45086</span>累计米粒</dt>
-            </li>
-            <li class="rank2">
-              <dd>越积越多</dd>
-              <dt><span>42570</span>累计米粒</dt>
-            </li>
-            <li class="rank3">
-              <dd>oooppp</dd>
-              <dt><span>36873</span>累计米粒</dt>
-            </li>
-            <li class="rank4">
-              <dd>ving</dd>
-              <dt><span>30265</span>累计米粒</dt>
-            </li>
-            <li class="rank5">
-              <dd>fenglei</dd>
-              <dt><span>28386</span>累计米粒</dt>
-            </li>
-          </ul>
-        </div>
+        {{ render(controller('JiliApiBundle:Top:ranking' ) ) }}
       </div>
       <div class="menu"><a class="month hover">月度</a><a class="year">年度</a></div>
     </div>    <!-- eof ranking   -->
